# cosmic

./: .gitignore  IDEAS_STATUS.md  MANUSCRIPT.md  README.md  SECURITY.md  build_canvas.js  directive_03.js  directive_04.js  genesis.js  ignite_server.js  main.js  package-lock.json  package.json  quantum-canvas-monorepo.md  verify_bridge.js
.github/workflows/: ci.yml
backend/: Advisor.js  AppEnforcer.js  ignite_server.js  package-lock.json  package.json
backend/agents/: DeepSeekAdvisor.js  GoalInterpreter.js  LinearAdapter.js  N8NAdapter.js  SyntaxValidator.js  TaskOrchestrator.js
backend/managers/: RalphLoopManager.js
backend/utils/: EventBus.js
ctx/: README.md  pyproject.toml
ctx/ctx/: __init__.py  cli.py  commands.py  db.py  tracker.py
ctx/shell/: ctx-hook.bash  ctx-hook.ps1  ctx-hook.zsh
extensions/devhound-vscode/: CHANGELOG.md  LICENSE.md  MARKETPLACE_LISTING.md  README.md  devhound-vscode-0.1.0.vsix  package-lock.json  package.json  tsconfig.json
extensions/devhound-vscode/src/: client.ts  extension.ts
quantum-canvas/apps/quantum-canvas/: .eslintrc.js  eslint.config.js  index.html  package-lock.json  package.json
quantum-canvas/apps/quantum-canvas/src/: App.tsx  main.tsx
scripts/: demoDoubleTap.js  demoGoalOrchestration.js  demoRalphLoop.js  launchToTheMoon.js  testBridge.js  testLinear.js
src/agents/: Advisor.js  ComplianceBeacon.js  SceneArchitect.js
src/components/: StatusBadge.tsx
src/components/__tests__/: StatusBadge.test.tsx
src/managers/: AppEnforcer.js  SovereigntyGuard.js
(+5 files in other folders)
